# leco-protocol

./: .gitignore  .readthedocs.yaml  Hello_world.md  README.md  appendix.md  components.md  conf.py  control_protocol.md  data_protocol.md  environment.yml  glossary.md  goals.md  index.rst  interfaces.md  introduction.md  messages.md  methods.md  network-structure.md  pyproject.toml
architectures/: index.rst  pymeasure_v0.11.md  template.md
requirements/: leco-protocol.yml
schemas/: actor.json  component.json  component_optional.json  coordinator.json  locking_actor.json  polling_actor.json
sphinx_ext/: __init__.py  json_ref_resolver.py  leco_json_viewer.py
